K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: taskfyer
spec:
  ingressClassName: nginx
  rules:
  - host: taskfyer.localhost #TODO: Change in production
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
  - host: api.taskfyer.localhost #TODO: Change in production
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 4000
