K8s/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: taskfyer
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend  # Allow only frontend to access the backend
    - from:
        - podSelector:
            matchLabels:
              app: backend  # Allow only backend to access MongoDB
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mongodb  # Allow backend to access MongoDB
